scalalib/src/test/resource/acyclic/src/test/resources/success/pkg/innercycle/a/package.scala
package success.pkg.innercycle

package object a {
  val p: A1 with A2 = null
  import acyclic.pkg
}
