scalalib/src/test/resource/acyclic/src/test/resources/fail/cyclicpackage/b/package.scala
package fail.cyclicpackage

package object b {
  import acyclic.pkg
}
